# blackmagic

./: .clang-format  .clang-tidy  .envrc  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  COPYING-BSD  COPYING-MIT  Dockerfile  HACKING  MCU.xml  Makefile  README  README.md  ReadMe_SJP.txt  SECURITY.md  STM32F401xE.mcudef  STM32F40x.mcudef  UsingRTT.md  UsingSWO  UsingSWO.md  WDBP-Debug.vgdbsettings  WDBP-Release.vgdbsettings  WDBP.sln  WDBP.vcxproj  WDBP.vcxproj.filters  build.sh  greg.sh  mcu.props  meson.build  meson_options.txt  prebuild.bat  shell.nix  stm32.props  stm32.xml  update_fw_usb_dfu_blackmagic.bat
.exo/: README.md  build.sh  flash.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.tom/: build.sh  cscope.sh
SVD/: STM32F411xx.svd
app/: README.md  app_log_buf.c  build.sh
cases/: README.md  open-case-v17-loose.stl  open-case-v17-snug.stl  open-case-v17.f3z  two-piece-case-bottom-v9.stl  two-piece-case-lid-v9.stl  two-piece-case-v10.f3z
cross-file/: 96b_carbon.ini  arm-none-eabi.ini  blackpill-f401cc.ini  blackpill-f401cd.ini  blackpill-f401ce.ini  blackpill-f411ce.ini  bluepill.ini  bluepillplus.ini  bmp-v1-remote.ini  bmp-v1-riscv.ini  bmp-v1-st-clones.ini  bmp-v1-uncommon.ini  bmp-v1.ini  bmp-v2-remote.ini  bmp-v2-riscv.ini  bmp-v2-st-clones.ini  bmp-v2-uncommon.ini  bmp-v2.ini  bmp-v3.ini  ctxlink.ini  f072.ini  f3.ini  f4discovery.ini  hydrabus.ini  launchpad-icdi.ini  native-remote.ini  native-riscv.ini  native-st-clones.ini  native-uncommon.ini  native.ini  stlink.ini  stlinkv3.ini  swlink.ini
crossfile/: arm-none-eabi.ini
driver/: 99-blackmagic-plugdev.rules  99-blackmagic-uucp.rules  99-blackmagic.rules  99-stlink-plugdev.rules  README.md  blackmagic.cat  blackmagic.inf  blackmagic_upgrade.cat  blackmagic_upgrade.inf  makecat.cmd
example_applet/: README.md  build.sh  logger_applet.c
flashstub/: Makefile  README  code-to-array.pl  dump-to-array.sh  efm32.c  efm32.stub  lmi.c  lmi.s  lmi.stub  nrf51.s  nrf51.stub  stm32.s  stm32.stub  stm32f1.c  stm32f1.stub  stm32f4.c  stm32f4.s  stm32f4.stub  stm32l05x-nvm-prog-erase.cc  stm32l05x-nvm-prog-erase.stub  stm32l05x-nvm-prog-write.cc  stm32l05x-nvm-prog-write.stub  stm32l4.c  stub.h
hardware/: Makefile  blackmagic.pcb  (+4 more)
src/: Makefile  adiv5.c  adiv5_jtagdp.c  adiv5_swdp.c  arm7tdmi.c  blackmagic.dfu  command.c  cortexa.c  cortexm.c  cortexm3.c  crc32.c  efm32.c  exception.c  ftoa.c  ftoa.h  gdb_hostio.c  gdb_hostio.h  gdb_main.c  gdb_packet.c  hex_utils.c  jtag_scan.c  jtagtap_generic.c  kinetis.c  lmi.c  lpc11xx.c  lpc15xx.c  lpc17xx.c  lpc43xx.c  lpc8xx.c  lpc_common.c  main.c  maths_utils.c  memwatch.c  meson.build  morse.c  nrf51.c  nxp_tgt.c  remote.c  remote.h  rtt.c  (+14 more)
src/arch/riscv/: rv32i_isa.h  rvdbg.h  rvdbg013.c  rvdbg013_jtag.c
src/include/: adiv5.h  align.h  app.h  applet.h  arm7tdmi.h  buffer_utils.h  command.h  cortexm.h  cortexm3.h  crc32.h  exception.h  gdb_if.h  gdb_main.h  gdb_packet.h  general.h  hex_utils.h  jtag_scan.h  jtagtap.h  lmi.h  lpc_common.h  maths_utils.h  memwatch.h  morse.h  nxp_tgt.h  platform_support.h  rtt.h  rtt_if.h  rvswd.h  serialno.h  spi_types.h  srtt.h  stdio_newlib.h  stm32.h  stm32_tgt.h  stm32l0-nvm.h  stm32lx-nvm.h  swd.h  swdptap.h  target.h  timeofday.h  (+2 more)
src/linux/: Makefile.inc  gdb_if.c  jtagtap.c  platform.c  platform.h  swdptap.c
src/platform/: README.md  meson.build
src/platform/96b_carbon/: Makefile.inc  platform.h
src/platform/blackpillv2/: Makefile.inc  platform.h
src/platform/common/: Makefile.inc  aux_serial.c  aux_serial.h  traceswo.h  usb.c  usb.h  usb_descriptors.h  usb_dfu_stub.h  usb_serial.h  usb_types.h
src/platform/common/stm32/: traceswoasync_f723.c  usbdfu.h
src/platform/f072/: Makefile.inc  platform.h
src/platform/f3/: Makefile.inc  README.md  platform.h
src/platform/f4discovery/: Makefile.inc  platform.h
src/platform/hosted/: Makefile.inc  README.md  bmp_hosted.h  bmp_libusb.c  bmp_remote.h  cli.c  cli.h  cmsis_dap.h  dap.h  dap_command.c  dap_command.h  dap_jtag.c  dap_swd.c  debug.c  debug.h  ftdi_bmp.c  ftdi_bmp.h  jlink.c  jlink.h  libftdi_jtagtap.c  libftdi_swdptap.c  platform.h  probe_info.h  rtt_if.c  serial_unix.c  stlinkv2.c  stlinkv2.h  stlinkv2_protocol.h  stlinkv2_swd.c  utils.h
src/platform/hosted/remote/: protocol_v0.c  protocol_v0.h  protocol_v0_adiv5.c  protocol_v0_adiv5.h  protocol_v0_defs.h  protocol_v0_jtag.h  protocol_v0_swd.h  protocol_v1.c  protocol_v1_adiv5.h  protocol_v1_defs.h  protocol_v2.h  protocol_v2_defs.h  protocol_v3_adiv5.h  protocol_v3_defs.h
src/platform/hydrabus/: Makefile.inc  platform.h
src/platform/launchpad-icdi/: Makefile.inc  platform.h
src/platform/native/: Makefile.inc  platform.h  usbdfu.c
src/platform/stlink/: Makefile.inc  platform.h  usbdfu.c
src/platform/stlinkv3/: Makefile.inc  platform.h  usbdfu.c
src/platform/stm32/: gpio.h  meson.build  rtt_if.c  timing_stm32.h  traceswo.c  traceswoasync.c
src/platform/swlink/: Connectors  Makefile.inc  platform.c  platform.h  platform_common.h
src/platform/tm4c/: gdb_if.c  meson.build
src/probe/: meson.build
src/probe/96b_carbon/: Makefile.inc  meson.build
src/probe/blackpillv2/: Makefile.inc  meson.build  platform.h
src/probe/bmda/: Makefile.inc
src/probe/f072/: Makefile.inc
src/probe/f3/: Makefile.inc  platform.h  stm32f303xc.ld
src/probe/f4discovery/: Makefile.inc  meson.build
src/probe/hydrabus/: Makefile.inc  meson.build  platform.h  usbdfu.c
src/probe/launchpad-icdi/: Makefile.inc  meson.build  platform.h
src/probe/native/: Makefile.inc  meson.build
src/probe/stlink/: Makefile.inc  meson.build  platform.c
src/probe/stlinkv3/: Makefile.inc  platform.c  stlinkv3.ld
src/probe/swlink/: Makefile.inc  meson.build  platform.h  usbdfu.c
src/stm32/: Makefile.inc  blackmagic.ld  cdcacm.c  gdb_if.c  jtagtap.c  platform.c  platform.h  swdptap.c  traceswo.c  traceswo.h  usbdfu.c  usbuart.c
src/winc1500/: winc1500_api.h  winc1500_driver_api_helpers.h
src/winc1500/src/: wf_errors.h  wf_ota.c  wf_ota.h  wf_spi.h  wf_wifi.c
(+47 files in other folders)
