option('probe', type: 'combo', choices : ['96b_carbon', 'bluepill', 'f072', 'f3', 'f4discovery', 'hydrabus', 'launchpad-icdi', 'native', 'stlink', 'swlink'], value: 'native', description: 'Hardware platform where the BMD firmware will run')
option('targets', type : 'array', choices : ['cortexar', 'cortexm', 'riscv32', 'riscv64', 'efm', 'hc32', 'lpc', 'nrf', 'nxp', 'renesas', 'rp', 'sam', 'stm', 'ti', 'xilinx'], description: 'Enabled debug targets')
option('print_memory_usage', type: 'boolean', value: true, description: 'Print firmware static memory usage at the end of the build')
option('debug_output', type: 'boolean', value: false, description: 'Enable debug output (for debugging the BMD stack, not debug targets)')
option('rtt_support', type: 'boolean', value: true, description: 'Enable RTT (Real Time Transfer) support')
option('rtt_ident', type: 'string', description: 'RTT (Real Time Transfer) identifier string')
option('no_own_ll', type: 'boolean', value: false, description: 'Use generic interface routines (for when low level routines are not available)')
option('stlink_swim_as_uart', type: 'boolean', value: false, description: 'Repurpose the SWIM pins as the UART (only applicable to stlink)')
