
src_includes = include_directories(
	'.',
	'include',
)

src_sources = files(
	'command.c',
	'crc32.c',
	'exception.c',
	'gdb_hostio.c',
	'gdb_main.c',
	'gdb_packet.c',
	'hex_utils.c',
	'main.c',
	'maths_utils.c',
	'morse.c',
	'remote.c',
	'rtt.c',
	'timing.c',
)

subdir('target')

subdir('probe')

subdir('platform')
